objects/WIP_Monthly_Snapshot__c.object
<CustomObject>
    <description>allows for reporting of specific values from the WIP report, used for CEO Dashboard reporting DO NOT DELETE.</description>
    <fields>
        <fullName>Accouting_Ops_Division__c</fullName>
        <label>Accouting Ops Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accumulated_Revenue__c</fullName>
        <label>Accumulated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <label>Direct Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_x_c__c</fullName>
        <label>Direct Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <label>PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Revenue__c</fullName>
        <label>Remaining Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <label>Sales Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>WIP Monthly SNAPSHOT</label>
    <nameField>
        <label>WIP Monthly Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WIP Monthly SNAPSHOTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>